--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -8,29 +8,6 @@ body {
   flex-direction: column;
 }
 
-.navbar {
-  width: 100%;
-  background: #1f1f23;
-  padding: 15px 0;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
-}
-
-.navbar ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 75px;
-}
-
-.navbar li {
-  cursor: pointer;
-  transition: color 0.3s;
-}
-
-.navbar li:hover {
-  color: #ff5555;
-}
-
 main {
   display: flex;
   flex: 1;
@@ -44,6 +21,7 @@ main {
   justify-content: flex-start;
   padding: 40px 40px 80px 40px;
   gap: 60px;
+  overflow-y: auto;
 }
 
 .vinyl-row {
@@ -54,6 +32,7 @@ main {
   border-bottom: 2px solid #333;
   padding-bottom: 20px;
   border-radius: 2px;
+  box-shadow: 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .vinyl {
@@ -72,6 +51,7 @@ main {
   height: 150px;
   border-radius: 50%;
   transition: transform 0.4s ease;
+  rotate: 10deg;
 }
 
 .vinyl:hover {
@@ -80,6 +60,10 @@ main {
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 10px;
   opacity: 1;
+}
+
+.vinyl:active {
+  cursor: grabbing;
 }
 
 .vinyl:hover img {
@@ -122,6 +106,15 @@ main {
   font-size: 12px;
 }
 
+.table {
+  position: absolute;
+  width: 40vh;
+  height: auto;
+  object-fit: cover;
+  pointer-events: none;
+  user-select: none;
+}
+
 .playcd {
   flex: 1;
   border-left: 2px solid #242427;
@@ -130,4 +123,67 @@ main {
   justify-content: center;
   position: relative;
   background: #0f0f12;
+}
+
+.playcd.dragover {
+  background: #222;
+}
+
+.playcd p {
+  font-size: 16px;
+  color: #777;
+  text-align: center;
+}
+
+#drop-text {
+  font-size: 16px;
+  color: #777;
+  text-align: center;
+  margin-bottom: 40px;
+  transition: all 0.4s ease;
+}
+
+#drop-text.playing {
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  margin-left: 0;
+  transform: translateX(-50px);
+}
+
+.vinyl-preview {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin-top: 20px;
+  animation: spin 6s linear infinite;
+  margin-bottom: 20px;
+}
+
+audio {
+  display: none;
+}
+
+.progress-bar {
+  background: #505050;
+  flex: 1;
+  height: 6px;
+  border-radius: 4px;
+  overflow: hidden;
+  margin: 0 0.5rem;
+
+  position: absolute;
+  bottom: 40px;
+  right: 50%;
+  transform: translateX(50%);
+  width: 80%;
+  max-width: 50%;
+  cursor: pointer;
+}
+
+#progress-bar-fill {
+  display: block;
+  height: 100%;
+  width: 0%;
+  background-color: #ff8edf;
 }
